--- a/src/notebooks/yield_calc.ipynb
+++ b/src/notebooks/yield_calc.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "yield_array = np.array( yields )\n",
     "#set log y\n",
-    "plt.yscale('log')\n",
+    "plt.yscale('linear')\n",
     "plt.plot( energies, yield_array )"
    ]
   },
@@ -58,7 +58,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-analysis",
+   "display_name": "analysis",
    "language": "python",
    "name": "python3"
   },
@@ -72,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
